# ws19907-playground

./: .gitignore  .gitmodules  LICENSE  README.md
cpp/: CMakeLists.txt  Makefile
cpp/include/: inochi_no_kagayaki.hpp  lcd_service.hpp  lgfx_ili9488.hpp  screen.hpp
cpp/include/inochi/: inochi.hpp  real.hpp  vec.hpp
cpp/src/: lgfx_spi_read_bytes.cpp  main.cpp
